<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.vulinh</groupId>
    <artifactId>spring-base-commons</artifactId>
    <version>3.1.0</version>

    <name>spring-base-commons</name>

    <properties>
        <java.version>21</java.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven-source-plugin.version>3.4.0</maven-source-plugin.version>

        <!-- https://mvnrepository.com/artifact/io.github.openfeign.querydsl/querydsl-core/versions -->
        <openfeign.querydsl.version>7.1</openfeign.querydsl.version>

        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core/versions -->
        <hibernate.version>6.6.41.Final</hibernate.version>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3/versions -->
        <commons-lang3.version>3.20.0</commons-lang3.version>

        <!-- https://mvnrepository.com/artifact/p6spy/p6spy/versions -->
        <p6spy.version>3.9.1</p6spy.version>

        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api/versions -->
        <slf4j-api.version>2.0.17</slf4j-api.version>

        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api/versions -->
        <junit-jupiter.version>5.14.2</junit-jupiter.version>

        <spring-boot-starter.version>3.5.10</spring-boot-starter.version>

        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson/jackson-bom/versions -->
        <jackson-bom.version>2.19.4</jackson-bom.version>

        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-stream/versions -->
        <spring-cloud-stream.version>4.3.2</spring-cloud-stream.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring-boot-starter.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <version>${spring-boot-starter.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.github.openfeign.querydsl</groupId>
            <artifactId>querydsl-jpa</artifactId>
            <version>${openfeign.querydsl.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>p6spy</groupId>
            <artifactId>p6spy</artifactId>
            <version>${p6spy.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-stream</artifactId>
            <version>${spring-cloud-stream.version}</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.hibernate.orm</groupId>
                            <artifactId>hibernate-jpamodelgen</artifactId>
                            <version>${hibernate.version}</version>
                        </path>
                        <path>
                            <groupId>io.github.openfeign.querydsl</groupId>
                            <artifactId>querydsl-apt</artifactId>
                            <version>${openfeign.querydsl.version}</version>
                            <classifier>jakarta</classifier>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
